[chips] take snapshot