@@ -6,6 +6,7 @@
 
 package mdplayer.chips;
 
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -35,8 +36,6 @@ public class Ym3812Chip extends BaseChip {
 
     private final RSoundChip[] realChips = {null, null};
 
-
-    // check cache or not
     private final int[] fadeout = {0, 0};
 
     @Deprecated
@@ -140,8 +139,7 @@ public class Ym3812Chip extends BaseChip {
         _write(chipId, addr, data, model);
     }
 
-    // TODO getInfo
-    public ChipKeyInfo getKeyInfo(int chipId) {
+    private ChipKeyInfo getKeyInfo(int chipId) {
         ChipKeyInfo[] keyInfoRet = {new ChipKeyInfo(14), new ChipKeyInfo(14)}; // TODO out for memory usage?
         for (int ch = 0; ch < keyInfo[chipId].off.length; ch++) {
             keyInfoRet[chipId].off[ch] = keyInfo[chipId].off[ch];
@@ -181,10 +179,12 @@ public class Ym3812Chip extends BaseChip {
         }
     }
 
-    public void setMask(int chipId, int ch, boolean mask) {
+    @Override
+    public void setMask(int chipId, int ch, boolean mask, Object... args) {
         this.mask[chipId][ch] = mask;
     }
 
+    @Override
     public void setFadeout(int chipId, int v) {
         fadeout[chipId] = v >> 1;// 0-63 (v range: 0-127)
         for (int c = 0; c < 22; c++) {
@@ -208,19 +208,11 @@ public class Ym3812Chip extends BaseChip {
     @Override
     public Map<String, Object> getInfo(int chipId) {
         Instrument inst = context.mds.inst(inst(chipId));
-        // a panel polls whether or not the song loaded this chip, so never hand back null
-        if (inst == null) return Map.of("register", new int[0x100]);
-        Map<String, Object> info = new HashMap<>(inst.getView(chipId, "info", null));
-        info.putAll(inst.getView(chipId, "register", null));
+        if (inst == null) return Collections.emptyMap();
+        Map<String, Object> info = new HashMap<>();
+        info.put("keyInfo", getKeyInfo(chipId));
+        info.putAll(inst.getView(chipId, "register") != null ? inst.getView(chipId, "register") : Collections.emptyMap());
         return info;
-    }
-
-    public void setMask(int chipId, int ch) {
-        setMask(chipId, ch, true);
-    }
-
-    public void resetMask(int chipId, int ch) {
-        setMask(chipId, ch, false);
     }
 
     @Override
@@ -235,7 +227,7 @@ public class Ym3812Chip extends BaseChip {
         setFadeout(1, 0);
     }
 
-    /** the panel/main-window view of whether a channel is muted; this array is the source of truth */
+    @Override
     public boolean getMask(int chipId, int ch) {
         return ch < mask[chipId].length && mask[chipId][ch];
     }
